# simple_python_package

./: .pypirc  README.md  pyproject.toml
src/utilsbenolan/: utils.py
tests/: test.ipynb
